--- a/230_Project_Master.qsf
+++ b/230_Project_Master.qsf
@@ -1,6 +1,6 @@
 # -------------------------------------------------------------------------- #
 #
-# Copyright (C) 1991-2012 Altera Corporation
+# Copyright (C) 1991-2011 Altera Corporation
 # Your use of Altera Corporation's design tools, logic functions 
 # and other software and tools, and its AMPP partner logic 
 # functions, and any output files from any of the foregoing 
@@ -17,8 +17,8 @@
 # -------------------------------------------------------------------------- #
 #
 # Quartus II 32-bit
-# Version 12.0 Build 178 05/31/2012 SJ Web Edition
-# Date created = 13:07:22  March 25, 2016
+# Version 11.1 Build 173 11/01/2011 SJ Web Edition
+# Date created = 20:45:27  March 30, 2016
 #
 # -------------------------------------------------------------------------- #
 #
@@ -36,26 +36,22 @@
 # -------------------------------------------------------------------------- #
 
 
-set_global_assignment -name FAMILY "Cyclone IV GX"
-set_global_assignment -name DEVICE EP4CGX75DF27C7
+set_global_assignment -name FAMILY "Cyclone II"
+set_global_assignment -name DEVICE auto
 set_global_assignment -name TOP_LEVEL_ENTITY Processor
-set_global_assignment -name ORIGINAL_QUARTUS_VERSION 12.0
-set_global_assignment -name PROJECT_CREATION_TIME_DATE "13:07:22  MARCH 25, 2016"
-set_global_assignment -name LAST_QUARTUS_VERSION 12.0
-set_global_assignment -name MIN_CORE_JUNCTION_TEMP 0
-set_global_assignment -name MAX_CORE_JUNCTION_TEMP 85
-set_global_assignment -name ERROR_CHECK_FREQUENCY_DIVISOR 1
-set_global_assignment -name NOMINAL_CORE_SUPPLY_VOLTAGE 1.2V
-set_global_assignment -name BSF_FILE updatedAND.bsf
+set_global_assignment -name ORIGINAL_QUARTUS_VERSION 11.1
+set_global_assignment -name PROJECT_CREATION_TIME_DATE "20:45:27  MARCH 30, 2016"
+set_global_assignment -name LAST_QUARTUS_VERSION 11.1
 set_global_assignment -name BDF_FILE XOR16bit/XOR16bit.bdf
 set_global_assignment -name BDF_FILE SixteenTwoToOne/SixteenTwoToOneMux.bdf
-set_global_assignment -name VHDL_FILE "Project Part II/IR24.vhd"
-set_global_assignment -name VHDL_FILE "Project Part II/immediate.vhd"
 set_global_assignment -name BDF_FILE RegisterFIle/SixteenRegisterFile.bdf
 set_global_assignment -name VHDL_FILE RegisterFIle/reg16.vhd
 set_global_assignment -name VHDL_FILE RegisterFIle/mux16.vhd
 set_global_assignment -name VHDL_FILE RegisterFIle/decoder16.vhd
 set_global_assignment -name VHDL_FILE "Project Part II/srcSwitch.vhdl"
+set_global_assignment -name VHDL_FILE "Project Part II/ProcessorStatusRegister.vhd"
+set_global_assignment -name VHDL_FILE "Project Part II/IR24.vhd"
+set_global_assignment -name VHDL_FILE "Project Part II/immediate.vhd"
 set_global_assignment -name VHDL_FILE "Project Part II/buffReg16.vhdl"
 set_global_assignment -name BDF_FILE OR16bit/OR16bit.bdf
 set_global_assignment -name BDF_FILE MainProject/MainProject.bdf
@@ -63,20 +59,20 @@ set_global_assignment -name BDF_FILE LogicFlags/LogicFlags.bdf
 set_global_assignment -name BDF_FILE InputSelector/InputSelector.bdf
 set_global_assignment -name BDF_FILE FullAdder16bit/FullAdder16bit.bdf
 set_global_assignment -name VHDL_FILE ControlUnit/Team11_Lab9.vhdl
+set_global_assignment -name BDF_FILE SixteenThreeToOneMux.bdf
+set_global_assignment -name BDF_FILE Processor.bdf
+set_global_assignment -name BDF_FILE ALU_Complete.bdf
+set_global_assignment -name BDF_FILE updatedAND.bdf
+set_global_assignment -name VHDL_FILE buffReg16.vhdl
+set_global_assignment -name VHDL_FILE ControlUnit.vhdl
 set_global_assignment -name BDF_FILE AND16bit/AND16bit.bdf
 set_global_assignment -name BDF_FILE ALU_out_multiplexer/ALU_out_multiplexer.bdf
 set_global_assignment -name BDF_FILE Adder1bit/Adder1bit.bdf
-set_global_assignment -name BDF_FILE SixteenTwoToOneMux.bdf
-set_global_assignment -name BDF_FILE Processor.bdf
-set_global_assignment -name BDF_FILE ALU_Complete.bdf
-set_global_assignment -name VHDL_FILE ControlUnit.vhdl
-set_global_assignment -name BDF_FILE SixteenThreeToOneMux.bdf
-set_global_assignment -name POWER_PRESET_COOLING_SOLUTION "23 MM HEAT SINK WITH 200 LFPM AIRFLOW"
-set_global_assignment -name POWER_BOARD_THERMAL_MODEL "NONE (CONSERVATIVE)"
+set_global_assignment -name EDA_SIMULATION_TOOL "ModelSim-Altera (VHDL)"
+set_global_assignment -name EDA_OUTPUT_DATA_FORMAT VHDL -section_id eda_simulation
+set_global_assignment -name EDA_TEST_BENCH_ENABLE_STATUS COMMAND_MACRO_MODE -section_id eda_simulation
+set_global_assignment -name EDA_SIMULATION_RUN_SCRIPT "Project Part II/Team11_Part2.do" -section_id eda_simulation
 set_global_assignment -name PARTITION_NETLIST_TYPE SOURCE -section_id Top
 set_global_assignment -name PARTITION_FITTER_PRESERVATION_LEVEL PLACEMENT_AND_ROUTING -section_id Top
 set_global_assignment -name PARTITION_COLOR 16764057 -section_id Top
-set_global_assignment -name BDF_FILE updatedAND.bdf
-set_global_assignment -name VHDL_FILE "Project Part II/ProcessorStatusRegister.vhd"
-set_global_assignment -name BDF_FILE SixteenTwoToOneMux.BDF
 set_instance_assignment -name PARTITION_HIERARCHY root_partition -to | -section_id Top
